# mcp-agent

./: .dockerignore  .gitignore  .hadolint.yaml  AUTH.md  CLI_README.md  CLI_SECRETS.md  Dockerfile  IMPLEMENTATION_PLAN.md  LLMS.txt  Makefile  README.md  TESTING_GUIDE.md  TEST_PLAN.md  gallery.md  mcp_agent.config.yaml  perplexity-policy.md  perplexity-policy.sty  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  checks.yml  docker-lint.yml  main-checks.yml  public-api-contract.yml  push-prod-image.yml  release-drafter.yml  sbom.yml  secrets-bridge.yml  tool-clients.yml  tools-registry.yml  trivy.yml
assets/context/: README.md
assets/examples/: context.inputs.tiny.json  manifest.tiny.json
docs/: SECRETS.md  TOOLS_REGISTRY.md  TOOL_CLIENTS.md  api.md  cli-reference.mdx  configuration.mdx  context-pack.md  docs.json  index.mdx  oauth_support_design.md  observability.md  run_lifecycle.md  test_runner.md
docs/advanced/: monitoring.mdx
docs/cloud/: agent-server.mdx  cli-reference.mdx  deploying-mcp-servers.mdx  deployment-quickstart.mdx  getting-started.mdx  overview.mdx
docs/concepts/: agents.mdx
docs/deployment/: deployment-quickstart.mdx  observability.mdx  overview.mdx
docs/get-started/: deploy-to-cloud.mdx  install.mdx  quickstart.mdx  welcome.mdx
docs/mcp-agent-sdk/: overview.mdx
docs/reference/: cli.mdx  configuration.mdx  decorators.mdx
docs/test-evaluate/: agent-evaluation.mdx  mcp-eval.mdx  overview.mdx  server-evaluation.mdx
examples/lm_studio/: main.py  mcp_agent.config.yaml
examples/oauth/: README.md
examples/temporal/: README.md  orchestrator.py  planner_subagents_nonblocking.py  workflows.py
examples/temporal_plugin/: README.md  basic_agent_server.py  basic_workflow.py  evaluator_optimizer.py  graded_report.md  main.py  mcp_agent.config.yaml  orchestrator.py  parallel_agent.py  replay.py  router.py  run_basic_workflow.py  run_worker.py  temporal_agent.py
schema/: context.manifest.schema.json  mcp-agent.config.schema.json  public.openapi.json
schemas/: toolItem.json  toolsResponse.json
scripts/: context_assemble.py
scripts/context/: README.md
src/mcp/: __init__.py
src/mcp_agent/: app.py  config.py
src/mcp_agent/cli/: BUILD.bazel  README.md  __init__.py  main.py  main_bootstrap.py  ux.py
src/mcp_agent/cli/auth/: BUILD.bazel  main.py  models.py
src/mcp_agent/cli/cli/: BUILD.bazel  __init__.py  main.py
src/mcp_agent/cli/cloud/: main.py
src/mcp_agent/cli/cloud/commands/: utils.py
src/mcp_agent/cli/cloud/commands/app/status/: main.py
src/mcp_agent/cli/cloud/commands/app/workflows/: main.py
src/mcp_agent/cli/cloud/commands/auth/login/: main.py
src/mcp_agent/cli/cloud/commands/auth/logout/: main.py
src/mcp_agent/cli/cloud/commands/auth/whoami/: main.py
src/mcp_agent/cli/cloud/commands/configure/: main.py
src/mcp_agent/cli/cloud/commands/deploy/: bundle_utils.py  main.py  materialize.py  validation.py  wrangler_wrapper.py
src/mcp_agent/cli/cloud/commands/logger/: __init__.py
src/mcp_agent/cli/cloud/commands/logger/configure/: main.py
src/mcp_agent/cli/cloud/commands/logger/tail/: main.py
src/mcp_agent/cli/cloud/commands/open/: __init__.py  main.py
src/mcp_agent/cli/cloud/commands/secrets/: main.py
src/mcp_agent/cli/cloud/commands/servers/: __init__.py  utils.py
src/mcp_agent/cli/cloud/commands/servers/delete/: main.py
src/mcp_agent/cli/cloud/commands/servers/describe/: main.py
src/mcp_agent/cli/cloud/commands/servers/list/: main.py
src/mcp_agent/cli/cloud/commands/servers/stats/: main.py
src/mcp_agent/cli/cloud/commands/servers/workflows/: __init__.py  main.py
src/mcp_agent/cli/cloud/commands/workflows/: __init__.py  utils.py
src/mcp_agent/cli/cloud/commands/workflows/cancel/: __init__.py  main.py
src/mcp_agent/cli/cloud/commands/workflows/describe/: __init__.py  main.py
src/mcp_agent/cli/cloud/commands/workflows/list/: main.py
src/mcp_agent/cli/cloud/commands/workflows/resume/: __init__.py  main.py
src/mcp_agent/cli/cloud/commands/workflows/runs/: main.py
src/mcp_agent/cli/cloud/commands/workflows/suspend/: __init__.py  main.py
src/mcp_agent/cli/commands/: BUILD.bazel  __init__.py  build.py  chat.py  config.py  configure.py  deploy.py  dev.py  doctor.py  init.py  install.py  invoke.py  keys.py  logs.py  models.py  quickstart.py  serve.py  server.py
src/mcp_agent/cli/commands/app/: BUILD.bazel  __init__.py
src/mcp_agent/cli/commands/app/delete/: BUILD.bazel  main.py
src/mcp_agent/cli/commands/app/status/: BUILD.bazel  main.py
src/mcp_agent/cli/commands/app/workflows/: BUILD.bazel  main.py
src/mcp_agent/cli/commands/apps/: BUILD.bazel
src/mcp_agent/cli/commands/apps/list/: BUILD.bazel  main.py
src/mcp_agent/cli/commands/configure/: BUILD.bazel  main.py
src/mcp_agent/cli/commands/deploy/: BUILD.bazel  __init__.py  constants.py  main.py  validation.py  wrangler_wrapper.py
src/mcp_agent/cli/commands/login/: BUILD.bazel  constants.py  main.py
src/mcp_agent/cli/commands/workflow/: BUILD.bazel
src/mcp_agent/cli/commands/workflow/status/: BUILD.bazel  main.py
src/mcp_agent/cli/config/: BUILD.bazel  __init__.py  settings.py
src/mcp_agent/cli/core/: BUILD.bazel  __init__.py  api_client.py  constants.py  utils.py
src/mcp_agent/cli/mcp_app/: BUILD.bazel  __init__.py  api_client.py  mcp_client.py  mock_client.py
src/mcp_agent/cli/secrets/: BUILD.bazel  __init__.py  api_client.py  constants.py  direct_vault_client.py  factory.py  http_client.py  interface.py  mock_client.py  processor.py  resolver.py  yaml_tags.py
src/mcp_agent/cli/utils/: display.py  git_utils.py  retry.py  typer_utils.py  ux.py
src/mcp_agent/cli/workflows/: BUILD.bazel  api_client.py
templates/repo/: CODEOWNERS
tests/: conftest.py  test_app.py  test_app_server_identity.py  test_audience_validation.py  test_config_exporters.py  test_oauth_utils.py  test_test_runner_manager.py  test_token_manager.py  test_token_verifier.py
tests/admin/: test_admin_api.py
tests/agents/: test_agent.py  test_agent_tasks_concurrency.py
tests/cli/: __init__.py  (+7 more)
tools/: tools.yaml
(+542 files in other folders)
