load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "__init__",
    srcs = ["__init__.py"],
    imports = [".."],
    tags = ["typecheck"],
    visibility = ["//visibility:public"],
    deps = [],
)

py_library(
    name = "ux",
    srcs = ["ux.py"],
    imports = [".."],
    tags = ["typecheck"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("rich"),
    ],
)
