load("@aspect_rules_py//py:defs.bzl", "py_image_layer")
load("@pip//:requirements.bzl", "requirement")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "cli",
    srcs = glob(["*.py"]),
    imports = ["../.."],
    tags = ["typecheck"],
    visibility = ["//visibility:public"],
    deps = [
        "//mcp-agent-cloud/py/sdk-cloud/src/mcp_agent_cloud:__init__",
        "//mcp-agent-cloud/py/sdk-cloud/src/mcp_agent_cloud/commands",
        requirement("typer"),
    ],
)

py_binary(
    name = "mcp-agent",
    srcs = glob(["*.py"]),
    imports = ["../.."],
    main = "main.py",
    tags = ["typecheck"],
    visibility = ["//visibility:public"],
    deps = [
        "//mcp-agent-cloud/py/sdk-cloud/src/mcp_agent_cloud:__init__",
        "//mcp-agent-cloud/py/sdk-cloud/src/mcp_agent_cloud/commands",
        requirement("typer"),
    ],
)

py_image_layer(
    name = "layer",
    binary = ":mcp-agent",
    compress = "gzip",
    tags = [
        "manual",
        "no-cache",
    ],
    tar_args = [
        "--options=compression-level=9",
        "--options=compression-threads=1",
    ],
    visibility = ["//visibility:public"],
)

oci_image(
    name = "image",
    base = "@lastmile_platform_cudaless",
    entrypoint = [
        "mcp-agent-cloud/py/sdk-cloud/src/mcp_agent_cloud/cli/mcp-agent",
    ],
    tags = [
        "manual",
        "no-cache",
    ],
    tars = [":layer"],
)

oci_load(
    name = "load-image",
    image = ":image",
    repo_tags = ["mcp-agent-sdk:latest"],
    tags = [
        "manual",
        "no-cache",
    ],
    visibility = ["//visibility:public"],
)
