load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "core",
    srcs = glob(["*.py"]),
    imports = ["../.."],
    tags = ["typecheck"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("httpx"),
    ],
)
