load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "app",
    srcs = ["__init__.py"],
    imports = ["../../.."],
    tags = ["typecheck"],
    visibility = ["//visibility:public"],
    deps = [
        "//mcp-agent-cloud/py/sdk-cloud/src/mcp_agent_cloud/commands/app/delete",
        "//mcp-agent-cloud/py/sdk-cloud/src/mcp_agent_cloud/commands/app/status",
        "//mcp-agent-cloud/py/sdk-cloud/src/mcp_agent_cloud/commands/app/workflows",
    ],
)
