load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "login",
    srcs = glob(["*.py"]),
    imports = ["../../.."],
    tags = ["typecheck"],
    visibility = ["//visibility:public"],
    deps = [
        "//mcp-agent-cloud/py/sdk-cloud/src/mcp_agent_cloud:ux",
        "//mcp-agent-cloud/py/sdk-cloud/src/mcp_agent_cloud/auth",
        "//mcp-agent-cloud/py/sdk-cloud/src/mcp_agent_cloud/config",
        "//mcp-agent-cloud/py/sdk-cloud/src/mcp_agent_cloud/core",
        "//mcp-agent-cloud/py/sdk-cloud/src/mcp_agent_cloud/mcp_app",
        requirement("httpx"),
        requirement("rich"),
        requirement("typer"),
    ],
)
